# pronounce-assess

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
examples/: gradio_demo.py  live_mic_demo.py  simple_demo.py
openvoice/: __init__.py  exceptions.py  models.py  phonemes.py  streaming.py
openvoice/utils/: prosody_eval.py
pronounce_assess/: __init__.py  audio.py  exceptions.py  models.py  phonemes.py  streaming.py
tests/: test_openvoice.py  test_pronounce_assess.py  test_streaming.py
